fix(app): fix the wrap problem occurs by over-long title

--- a/app/app.sass
+++ b/app/app.sass
@@ -287,7 +287,7 @@ body // {{{ general
 
 .item
   color: black
-  display: block
+  display: inline-block
   font-family: 'mon'
   height: 0
   opacity: 0
@@ -317,7 +317,6 @@ body // {{{ general
     transition: opacity $normal-term 
 
   [data-orientation='landscape'] .page-content[data-page-content='list'] &
-    float: left
     height: auto
     margin: 0 2% 2% 2%
     width: 45%
@@ -338,16 +337,14 @@ body // {{{ general
       margin-right: .5em
 
   p
+    line-height: 1.5
     white-space: pre-line
-
+    
     [data-orientation='landscape'] &
       font-size: 1vw
-      line-height: 2
 
     [data-orientation='portrait'] &
       font-size: 3vw
-      line-height: 2
-      margin: 0
 
     [data-page-content='list'] &
       -webkit-line-clamp: 2
@@ -367,7 +364,7 @@ body // {{{ general
 .item .title
   display: flex
   font-weight: 900
-  line-height: 2
+  line-height: 1.5
 
   [data-orientation='landscape'] &
     font-size: 2.5vw
@@ -382,16 +379,13 @@ body // {{{ general
     font-size: 4.5vw
     //margin-top: -2px why?
 
-  [data-page-content='list'] &
-    white-space: nowrap
-
 .date
   position: relative
   text-align: right
   width: 100%
 
   [data-orientation='landscape'] &
-    line-height: 1.5
+    //line-height: 1.5
     margin-top: 1em
     font-size: 1vw
 
